--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,32 +15,7 @@
             android:layout_height="426dp"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/etFullName"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="你的全名"
-                android:inputType="textPersonName" />
-
             <requestFocus />
-
-            <EditText
-                android:id="@+id/etUserName"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
-                android:ems="10"
-                android:hint="帳號" />
-
-            <EditText
-                android:id="@+id/etPassword"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:ems="10"
-                android:hint="密碼"
-                android:inputType="textPassword" />
 
             <EditText
                 android:id="@+id/etPhone"
@@ -52,27 +27,29 @@
                 android:inputType="phone" />
 
             <EditText
-                android:id="@+id/etEmail"
+                android:id="@+id/etPassword"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="18dp"
                 android:ems="10"
-                android:hint="信箱"
-                android:inputType="textEmailAddress" />
+                android:hint="密碼"
+                android:inputType="textPassword" />
 
             <Button
                 android:id="@+id/btnSignup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="signup"
-                android:text="註冊" />
+                android:onClick="login"
+                android:text="登入" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="login"
-                android:text="返回" />
+                android:onClick="singup"
+                android:text="註冊"
+                tools:layout_editor_absoluteX="-6dp"
+                tools:layout_editor_absoluteY="185dp" />
 
         </LinearLayout>
 
